Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79254

QWebEngineView couldn't handle touch events for html select's popup menus

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.5, 6.3.1, 6.4.0 Beta1
    • 5.12.4, 5.12.11, 5.13.0, 5.15.5
    • WebEngine
    • None
    • Windows
    • 1f6495af63 (qt/qtwebengine/dev) d76749b0d1 (qt/qtwebengine/6.3) 898bf1d6bd (qt/qtwebengine/6.2) d76749b0d1 (qt/qtwebengine/6.3.1) 400355fa51 (qt/qtwebengine/5.15) 400355fa51 (qt/tqtc-qtwebengine/5.15) d76749b0d1 (qt/tqtc-qtwebengine/6.3.1)

      <select onchange="alert('option changed!');">
      <option value="0">V0</option>
      <option value="1">V1</option>
      <option value="2">V2</option>
      <option value="3">V3</option>
      </select>

       

      Poup menu items' could not be touched under surface win10 touch screen; while mouse events works fine.
      NOTE:
      1)Quick nano browser demo works
      2)Webengine widgets simple browser do not works, could not show alert box. All select element's popup menu item could not be changed.

        For Gerrit Dashboard: QTBUG-79254
        # Subject Branch Project Status CR V

            kiburtse Kirill Burtsev
            secular_wheel Secular Wheel
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: