Fix touch input for html's popup in quick impl

Ammends 292f573f4e. Now that touch events are forwarded to popup
delegate also instead of synthesized mouse events, the bug with touch
event being ignored became present. Also extend testing of touch
events for html popups.

Task-number: QTBUG-79254
Fixes: QTBUG-103217
Change-Id: I097a6617493355c7603fef8eb41025e299a6e809
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit 9334feb682db6e6e35bc98dce377a091eb640438)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>