tests/auto/widgets/touchinput/tst_touchinput.cpp
@@ -37,6 +37,12 @@
 
 static QPointingDevice* s_touchDevice = nullptr;
 
+struct Page : QWebEnginePage
+{
+    QStringList alerts;
+    void javaScriptAlert(const QUrl &/*origin*/, const QString &msg) override { alerts.append(msg); }
+};
+
 class TouchInputTest : public QObject
 {
     Q_OBJECT
@@ -54,13 +60,22 @@ private Q_SLOTS:
     void pinchZoom_data();
     void pinchZoom();
     void complexSequence();
+    void buttonClickHandler();
+    void htmlSelectPopup();
 
 private:
+    Page page;
     QWebEngineView view;
     QSignalSpy loadSpy { &view, &QWebEngineView::loadFinished };
     QPoint notextCenter, textCenter, inputCenter;
 
     QString activeElement() { return evaluateJavaScriptSync(view.page(), "document.activeElement.id").toString(); }
+
+    void makeTouch(QWindow *w, const QPoint &p) {
+        QTest::touchEvent(w, s_touchDevice).press(1, p);
+        QTest::touchEvent(w, s_touchDevice).release(1, p);
+    }
+    void makeTouch(const QPoint &p) { makeTouch(view.windowHandle(), p); }
 
     void gestureScroll(bool down) {
         auto target = view.focusProxy();
@@ -131,6 +146,7 @@ void TouchInputTest::initTestCase()
 {
     s_touchDevice = QTest::createTouchDevice();
 
+    view.setPage(&page);
     view.settings()->setAttribute(QWebEngineSettings::FocusOnNavigationEnabled, false);
 
     view.show(); view.resize(480, 320);
@@ -140,6 +156,9 @@ void TouchInputTest::initTestCase()
                  "<p id='text' style='width: 150px;'>The Qt Company</p>"
                  "<div id='notext' style='width: 150px; height: 100px; background-color: #f00;'></div>"
                  "<form><input id='input' width='150px' type='text' value='The Qt Company2' /></form>"
+                 "<button id='btn' type='button' onclick='alert(\"button clicked!\")'>Click Me!</button>"
+                 "<select id='select' onchange='alert(\"option changed to: \" + this.value)'>"
+                 "<option value='O1'>O1</option><option value='O2'>O2</option><option value='O3'>O3</option></select>"
                  "<table style='width: 100%; padding: 15px; text-align: center;'>"
                  "<tr><td>BEFORE</td><td><div class='rect' style='background-color: #00f;'></div></td><td>AFTER</td></tr>"
                  "<tr><td>BEFORE</td><td><div class='rect' style='background-color: #0f0;'></div></td><td>AFTER</td></tr>"
@@ -163,6 +182,7 @@ void TouchInputTest::cleanup()
     evaluateJavaScriptSync(view.page(), "window.scrollTo(0, 0)");
     QTRY_COMPARE(getScrollPosition(), 0);
     QTRY_COMPARE(pageScrollPosition(), 0);
+    page.alerts.clear();
 }
 
 void TouchInputTest::touchTap()
@@ -343,6 +363,34 @@ void TouchInputTest::complexSequence()
             QTRY_VERIFY2(getScaleFactor(&s) > scaleBefore, qPrintable(QString("i: %1, scale: %2").arg(i).arg(s)));
         }
     }
+}
+
+void TouchInputTest::buttonClickHandler()
+{
+    auto buttonCenter = elementGeometry(view.page(), "btn").center();
+    makeTouch(buttonCenter);
+    QTRY_VERIFY(!page.alerts.isEmpty());
+    QCOMPARE(page.alerts.first(), "button clicked!");
+    QCOMPARE(page.alerts.size(), 1);
+    QEXPECT_FAIL("", "Shouldn't trigger twice due to synthesized mouse events for touch", Continue);
+    QTRY_VERIFY_WITH_TIMEOUT(page.alerts.size() == 2, 500);
+}
+
+void TouchInputTest::htmlSelectPopup()
+{
+    auto selectRect = elementGeometry(view.page(), "select");
+    makeTouch(selectRect.center());
+    QTRY_VERIFY(QApplication::activePopupWidget());
+    QCOMPARE(activeElement(), QStringLiteral("select"));
+
+    auto popup = QApplication::activePopupWidget();
+    makeTouch(popup->windowHandle(), QPoint(popup->width() / 2, popup->height() / 2));
+    QTRY_VERIFY(!QApplication::activePopupWidget());
+
+    QTRY_VERIFY(!page.alerts.isEmpty());
+    QCOMPARE(page.alerts.first(), "option changed to: O2");
+    QEXPECT_FAIL("", "Shouldn't trigger twice due to synthesized mouse events for touch", Continue);
+    QTRY_VERIFY_WITH_TIMEOUT(page.alerts.size() == 2, 500);
 }
 
 QTEST_MAIN(TouchInputTest)
